Revert "added ci"

--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   },
   "scripts": {
     "wdio": "wdio run ./wdio.conf.ts",
-    "wdio:action": "wdio run ./github-actions.conf.ts",
-    "allure": "allure generate allure-results/ --clean && allure open",
-    "report": "allure generate allure-results/ --clean"
+    "allure": "allure generate allure-results/ --clean && allure open"
   }
 }
