fixed upload artifact

--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -40,5 +40,5 @@ jobs:
       - name: Archive Test results
         uses: actions/upload-artifact@v3
         with:
-          name: allure-result
-          path: allure-results/
+          name: allure-report
+          path: allure-report/
